// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <UserPanel /> should renders with props correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <StaticRouter
    basename=""
    context={Object {}}
    location="someLocation"
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "someLocation",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <UserPanel
        addUserPanels={Array []}
        openedPanel="userAccountPanel"
        pageUrl=""
        router={
          Object {
            "location": Object {
              "hash": "#/patients-summary",
              "pathname": "/",
              "search": "",
            },
          }
        }
        userId=""
      >
        <ul
          className="user-panel"
          role="tablist"
        >
          <TopHeaderButtons
            pageUrl=""
          />
          <UserPanelItem
            className="user-panel-item dropdown"
          >
            <li
              className="user-panel-item dropdown"
            >
              <NotificationContent>
                <div
                  className="notifications-drop dropdown-menu dropdown-menu-right"
                  id="tab-notifications"
                >
                  <div
                    className="notifications-header"
                  >
                    Notifications (2)
                  </div>
                  <div
                    className="notifications-body"
                  >
                    <ul
                      className="notifications-list"
                    >
                      <li
                        className="notifications-list-item"
                      >
                        <div
                          className="notification-info"
                        >
                          Information from Liquid Logic (Social Care) is currently unavailable.
                        </div>
                        <div
                          className="notification-time"
                        >
                          <em>
                            10 minutes ago
                          </em>
                        </div>
                      </li>
                      <li
                        className="notifications-list-item"
                      >
                        <div
                          className="notification-info"
                        >
                          Information from Liquid Logic (Social Care) is currently unavailable.
                        </div>
                        <div
                          className="notification-time"
                        >
                          <em>
                            15 minutes ago
                          </em>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </NotificationContent>
              <PTButton
                className="btn-header btn-notification"
                onClick={[Function]}
              >
                <button
                  className="btn-header btn-notification"
                  onClick={[Function]}
                >
                  <div>
                    <i
                      className="fa fa-bell-o"
                    />
                    <span
                      className="count"
                    >
                      2
                    </span>
                  </div>
                </button>
              </PTButton>
            </li>
          </UserPanelItem>
          <UserPanelItem
            className="user-panel-item dropdown"
          >
            <li
              className="user-panel-item dropdown"
            >
              <Connect(Connect(lifecycle(UserAccountPanel)))
                onClick={[Function]}
                onClose={[Function]}
              >
                <Connect(lifecycle(UserAccountPanel))
                  dispatch={[Function]}
                  initialiseData={
                    Object {
                      "mode": "demo",
                      "token": "d4281221-3950-4019-b207-18e49086dab8",
                      "version": "2.32.1",
                    }
                  }
                  onClick={[Function]}
                  onClose={[Function]}
                >
                  <lifecycle(UserAccountPanel)
                    actions={
                      Object {
                        "logoutStart": [Function],
                      }
                    }
                    dispatch={[Function]}
                    initialiseData={
                      Object {
                        "mode": "demo",
                        "token": "d4281221-3950-4019-b207-18e49086dab8",
                        "version": "2.32.1",
                      }
                    }
                    onClick={[Function]}
                    onClose={[Function]}
                    user={
                      Object {
                        "email": "bob.smith@gmail.com",
                        "family_name": "Smith",
                        "given_name": "Bob",
                        "role": "IDCR",
                        "roles": Array [
                          "IDCR",
                        ],
                        "sub": "28AD8576-1948-4C84-8B5E-55FB7EE027CE",
                        "tenant": null,
                      }
                    }
                  >
                    <UserAccountPanel
                      actions={
                        Object {
                          "logoutStart": [Function],
                        }
                      }
                      dispatch={[Function]}
                      initialiseData={
                        Object {
                          "mode": "demo",
                          "token": "d4281221-3950-4019-b207-18e49086dab8",
                          "version": "2.32.1",
                        }
                      }
                      onClick={[Function]}
                      onClose={[Function]}
                      user={
                        Object {
                          "email": "bob.smith@gmail.com",
                          "family_name": "Smith",
                          "given_name": "Bob",
                          "role": "IDCR",
                          "roles": Array [
                            "IDCR",
                          ],
                          "sub": "28AD8576-1948-4C84-8B5E-55FB7EE027CE",
                          "tenant": null,
                        }
                      }
                    >
                      <div
                        className="dropdown-user dropdown-menu-right dropdown-menu"
                      >
                        <div
                          className="user-profile-image"
                          onClick={[Function]}
                        >
                          <div
                            className="img"
                          >
                            <img
                              alt=""
                              src="/images/user.jpg"
                            />
                          </div>
                        </div>
                        <div
                          className="user-profile-info"
                        >
                          <div
                            className="user-profile-info__item name"
                            onClick={[Function]}
                          >
                            Bob
                             
                            Smith
                          </div>
                          <div
                            className="user-profile-info__descr"
                          >
                            <div
                              className="user-profile-info__item role"
                            >
                              User Role:
                              IDCR
                            </div>
                            <div
                              className="user-profile-info__item email"
                            >
                              bob.smith@gmail.com
                            </div>
                          </div>
                          <div
                            className="specification"
                          >
                            <div
                              className="user-profile-info__title registered"
                            >
                              Registered GP
                            </div>
                            <div
                              className="user-profile-info__item version-back"
                            >
                              About Showcase Stack; PulseTile version 
                              1.0.0
                              /QEWD_Ripple version 
                              2.32.1
                            </div>
                            <div
                              className="user-profile-info__item version-front"
                            >
                              React version 
                              15.6.2
                            </div>
                          </div>
                          <PTButton
                            className="btn btn-theme btn-block btn-signout"
                            onClick={[Function]}
                          >
                            <button
                              className="btn btn-theme btn-block btn-signout"
                              onClick={[Function]}
                            >
                              <div>
                                <span
                                  className="brn-text"
                                >
                                  Sign Out
                                </span>
                                 
                                <i
                                  className="btn-icon fa fa-sign-out"
                                />
                              </div>
                            </button>
                          </PTButton>
                        </div>
                        <Connect(UserAccountPanelSettings)
                          onClose={[Function]}
                        >
                          <UserAccountPanelSettings
                            actions={
                              Object {
                                "changeUserProfileTab": [Function],
                              }
                            }
                            onClose={[Function]}
                          >
                            <div
                              className="user-profile-settings dropdown"
                            >
                              <div
                                className="user-profile-settings__btn"
                                onClick={[Function]}
                              >
                                <i
                                  className="fa fa-gear"
                                />
                              </div>
                              <div
                                className="user-profile-settings__menu dropdown-menu dropdown-menu-small-size"
                              >
                                <div
                                  className="dropdown-menu-wrap-list"
                                >
                                  <div
                                    className="dropdown-menu-list"
                                  >
                                    <div
                                      className="dropdown-menu-item"
                                      onClick={[Function]}
                                    >
                                      <span
                                        className="dropdown-menu-item-text"
                                      >
                                        Application Preferences
                                      </span>
                                    </div>
                                    <div
                                      className="dropdown-menu-item"
                                      onClick={[Function]}
                                    >
                                      <span
                                        className="dropdown-menu-item-text"
                                      >
                                        Personal Information
                                      </span>
                                    </div>
                                    <div
                                      className="dropdown-menu-item"
                                      onClick={[Function]}
                                    >
                                      <span
                                        className="dropdown-menu-item-text"
                                      >
                                        Contact Information
                                      </span>
                                    </div>
                                    <div
                                      className="dropdown-menu-item"
                                      onClick={[Function]}
                                    >
                                      <span
                                        className="dropdown-menu-item-text"
                                      >
                                        Change History
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </UserAccountPanelSettings>
                        </Connect(UserAccountPanelSettings)>
                      </div>
                    </UserAccountPanel>
                  </lifecycle(UserAccountPanel)>
                </Connect(lifecycle(UserAccountPanel))>
              </Connect(Connect(lifecycle(UserAccountPanel)))>
              <PTButton
                className="btn-header btn-user"
                id="icon-profile"
                onClick={[Function]}
              >
                <button
                  className="btn-header btn-user"
                  id="icon-profile"
                  onClick={[Function]}
                >
                  <i
                    className="fa fa-user"
                  />
                </button>
              </PTButton>
            </li>
          </UserPanelItem>
        </ul>
      </UserPanel>
    </Router>
  </StaticRouter>
</Provider>
`;

exports[`Component <UserPanel /> should renders with props correctly shallow testing 1`] = `
<ul
  className="user-panel"
  role="tablist"
>
  <UserPanelItem
    className="user-panel-item"
  >
    test
  </UserPanelItem>
  <TopHeaderButtons
    pageUrl=""
  />
  <UserPanelItem
    className="user-panel-item dropdown"
  >
    <NotificationContent />
    <PTButton
      className="btn-header btn-notification"
      onClick={[Function]}
    >
      <div>
        <i
          className="fa fa-bell-o"
        />
        <span
          className="count"
        >
          2
        </span>
      </div>
    </PTButton>
  </UserPanelItem>
  <UserPanelItem
    className="user-panel-item dropdown"
  >
    <Connect(Connect(lifecycle(UserAccountPanel)))
      onClick={[Function]}
      onClose={[Function]}
    />
    <PTButton
      className="btn-header btn-user"
      id="icon-profile"
      onClick={[Function]}
    >
      <i
        className="fa fa-user"
      />
    </PTButton>
  </UserPanelItem>
</ul>
`;

exports[`Component <UserPanel /> should renders with props correctly shallow testing 2`] = `
<ul
  className="user-panel"
  role="tablist"
>
  <UserPanelItem
    className="user-panel-item"
  >
    test
  </UserPanelItem>
  <TopHeaderButtons
    pageUrl=""
  />
  <UserPanelItem
    className="user-panel-item dropdown"
  >
    <NotificationContent />
    <PTButton
      className="btn-header btn-notification"
      onClick={[Function]}
    >
      <div>
        <i
          className="fa fa-bell-o"
        />
        <span
          className="count"
        >
          2
        </span>
      </div>
    </PTButton>
  </UserPanelItem>
  <UserPanelItem
    className="user-panel-item dropdown open"
  >
    <Connect(Connect(lifecycle(UserAccountPanel)))
      onClick={[Function]}
      onClose={[Function]}
    />
    <PTButton
      className="btn-header btn-user"
      id="icon-profile"
      onClick={[Function]}
    >
      <i
        className="fa fa-user"
      />
    </PTButton>
  </UserPanelItem>
</ul>
`;

exports[`Component <UserPanel /> should renders with props correctly shallow testing 3`] = `
<ul
  className="user-panel"
  role="tablist"
>
  <UserPanelItem
    className="user-panel-item"
  >
    test
  </UserPanelItem>
  <TopHeaderButtons
    pageUrl=""
  />
  <UserPanelItem
    className="user-panel-item dropdown"
  >
    <NotificationContent />
    <PTButton
      className="btn-header btn-notification"
      onClick={[Function]}
    >
      <div>
        <i
          className="fa fa-bell-o"
        />
        <span
          className="count"
        >
          2
        </span>
      </div>
    </PTButton>
  </UserPanelItem>
  <UserPanelItem
    className="user-panel-item dropdown open"
  >
    <Connect(Connect(lifecycle(UserAccountPanel)))
      onClick={[Function]}
      onClose={[Function]}
    />
    <PTButton
      className="btn-header btn-user"
      id="icon-profile"
      onClick={[Function]}
    >
      <i
        className="fa fa-user"
      />
    </PTButton>
  </UserPanelItem>
</ul>
`;

exports[`Component <UserPanel /> should renders with props correctly shallow testing 4`] = `
<ul
  className="user-panel"
  role="tablist"
>
  <TopHeaderButtons
    pageUrl=""
  />
  <UserPanelItem
    className="user-panel-item dropdown"
  >
    <NotificationContent />
    <PTButton
      className="btn-header btn-notification"
      onClick={[Function]}
    >
      <div>
        <i
          className="fa fa-bell-o"
        />
        <span
          className="count"
        >
          2
        </span>
      </div>
    </PTButton>
  </UserPanelItem>
  <UserPanelItem
    className="user-panel-item dropdown"
  >
    <Connect(Connect(lifecycle(UserAccountPanel)))
      onClick={[Function]}
      onClose={[Function]}
    />
    <PTButton
      className="btn-header btn-user"
      id="icon-profile"
      onClick={[Function]}
    >
      <i
        className="fa fa-user"
      />
    </PTButton>
  </UserPanelItem>
</ul>
`;
